# image_handle

./: README.md
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/mobile/indoorbuy/com/image_handle/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/cpp/bean/: Color.cpp  Color.h
app/src/main/cpp/handle/: GrayHandle.cpp  GrayHandle.h
app/src/main/cpp/include/: AndroidLog.h
app/src/main/java/mobile/indoorbuy/com/image_handle/: MainActivity.kt
app/src/main/java/mobile/indoorbuy/com/image_handle/handle/: BitConvertHandle.kt  GraySetHandle.kt  Handle.kt
app/src/main/java/mobile/indoorbuy/com/image_handle/imageC/: ImageHandleForC.java
app/src/main/java/mobile/indoorbuy/com/image_handle/utils/: Content.kt  ImagePixelUtls.kt  ImageUtils.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/mobile/indoorbuy/com/image_handle/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
